mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v12__test__v11_to_v12_migration_pq_auto_to_on-2.snap
---
source: mullvad-daemon/src/migrations/v12.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "tunnel_options": {
    "wireguard": {
      "quantum_resistant": "on"
    }
  }
}
