mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v12__test__v12_to_v13_migration_migrate_filters_to_new_entry_only_filters_skip_insert_if_exists.snap
---
source: mullvad-daemon/src/migrations/v12.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "relay_settings": {
    "normal": {
      "ownership": "any",
      "providers": {
        "only": {
          "providers": [
            "MullvadOwned",
            "Creanova"
          ]
        }
      },
      "wireguard_constraints": {
        "entry_ownership": {
          "only": "MullvadOwned"
        },
        "entry_providers": "any"
      }
    }
  }
}
